@@ -28,6 +28,15 @@
 	* if.h: (struct connected) Document the meaning of the
 	  ZEBRA_IFC_REAL and ZEBRA_IFC_CONFIGURED flags.
 
+2006-05-23 Paul Jakma <paul.jakma@sun.com>
+
+	* route_types.txt: New file, table of ZEBRA_ROUTE definitions.
+	* route_types.awk: New script, to parse previous and generate
+	  (for now) redistribute string defines.
+	* Makefile.am: build route_types.h using previous two, ala
+	  memtypes.h, include the script and table file in EXTRA_DIST.
+	* command.h: pull in route_types.h, add a REDIST_STR define.
+
 2006-05-15 Paul Jakma <paul.jakma@sun.com>
 
 	* log.c: (general) Generalise struct zebra_route_desc into
